-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 4.11.0
-
None
-
65e2e374069d3e9e331105bdc8866efa26b9960d (qt-creator/qt-creator/4.11)
Why connecting to server I get a warning in general messages tab: `LanguageClient ocamllsp 4.07: Initialize result is not valid: capabilities->codeActionProvider->Expected type Bool but value contained Object`
Interesting part of JSON is:
send: {
"id": "{9ebff7c5-a847-4de9-82a7-8be52d691fe9}",
"jsonrpc": "2.0",
"result": {
"capabilities": {
"codeActionProvider": { "codeActionsKinds": [ "destruct" ] },
...
}
}
}
Specification says that
/** * The server provides code actions. The `CodeActionOptions` return type is only * valid if the client signals code action literal support via the property * `textDocument.codeAction.codeActionLiteralSupport`. */ codeActionProvider?: boolean | CodeActionOptions;
It seems that QtCreator expects only boolean value there and doesn't parse this as `CodeActionOptions`.
Also positioning of arrows seems to be weird but it is a minor issue
P.S. Sorry if this is already reported somewhere
| For Gerrit Dashboard: QTCREATORBUG-23553 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 288945,4 | LanguageClient: Fix expected codeActionProvider value | 4.11 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 288946,1 | LanguageClient: Fix expected codeActionProvider value | master | qt-creator/qt-creator | Status: ABANDONED | -1 | 0 |