LanguageClient: Fix expected codeActionProvider value

Fixes: QTCREATORBUG-23553
Change-Id: I3604905cddcc27c45f842cf54c1e4c39fd1bc5c0
Reviewed-by: Christian Stenger <christian.stenger@qt.io>